0.2.x
2018-unreleased
---


0.2.1
2018.07.11
---
- now requiring pyramid_formencode_classic==0.2.2
-- this inherently requires formencode v2.0.0a1
- now requiring pyramid_debugtoolbar>=4.4
- made a formhandling custom library


0.2.0
2018.05.21
---
- updating some functionality for imports
- some ux fixes
- the nginx status tools now return a better json payload
- adding a settings panel that documents all the config options
- adding more json endpoints for easier commandline work
- private keys can now be marked as default
- SQL Changes
    ALTER TABLE ssl_acme_account_key ADD acme_account_provider_id INTEGER;
    ALTER TABLE ssl_acme_account_key ALTER acme_account_provider_id SET NOT NULL;
    ALTER TABLE ssl_certificate_request RENAME ssl_letsencrypt_account_key_id TO ssl_acme_account_key_id;
    ALTER TABLE ssl_letsencrypt_account_key RENAME TO ssl_acme_account_key;
    ALTER TABLE ssl_operations_object_event RENAME ssl_letsencrypt_account_key_id TO ssl_acme_account_key_id;
    ALTER TABLE ssl_private_key ADD is_default BOOLEAN DEFAULT NULL;
    ALTER TABLE ssl_queue_renewal ADD ssl_server_certificate_id__renewed INT REFERENCES ssl_server_certificate(id);
    ALTER TABLE ssl_queue_renewal ADD timestamp_process_attempt DATETIME;
    ALTER TABLE ssl_queue_renewal ALTER ssl_server_certificate_id DROP NOT NULL;
    ALTER TABLE ssl_server_certificate RENAME ssl_letsencrypt_account_key_id TO ssl_acme_account_key_id;
    ALTER TABLE ssl_server_certificate ADD timestamp_revoked_upstream DATETIME DEFAULT NULL;
    UPDATE ssl_acme_account_key SET acme_account_provider_id = 2;

- SQLITE Check
    PRAGMA table_info(ssl_private_key);
    PRAGMA table_info(ssl_queue_renewal);
	PRAGMA table_info(ssl_certificate_request);
	PRAGMA table_info(ssl_server_certificate);
	PRAGMA table_info(ssl_operations_object_event);

- centralized some json list views into the main views
- centralized json representation into the model. used as_json instead of the encoder hook for now.