@@ -122,12 +122,20 @@ def _admin_views(config):
     # Certificates
     config.add_route_7('admin:certificates', '/certificates')
     config.add_route_7('admin:certificates_paginated', '/certificates/{@page}')
+    config.add_route_7('admin:certificates:active', '/certificates/active')
+    config.add_route_7('admin:certificates:active_paginated', '/certificates/active/{@page}')
     config.add_route_7('admin:certificates:expiring', '/certificates/expiring')
     config.add_route_7('admin:certificates:expiring_paginated', '/certificates/expiring/{@page}')
+    config.add_route_7('admin:certificates:inactive', '/certificates/inactive')
+    config.add_route_7('admin:certificates:inactive_paginated', '/certificates/inactive/{@page}')
     config.add_route_7('admin:certificates|json', '/certificates.json')
     config.add_route_7('admin:certificates_paginated|json', '/certificates/{@page}.json')
+    config.add_route_7('admin:certificates:active|json', '/certificates/active.json')
+    config.add_route_7('admin:certificates:active_paginated|json', '/certificates/active/{@page}.json')
     config.add_route_7('admin:certificates:expiring|json', '/certificates/expiring.json')
     config.add_route_7('admin:certificates:expiring_paginated|json', '/certificates/expiring/{@page}.json')
+    config.add_route_7('admin:certificates:inactive|json', '/certificates/inactive.json')
+    config.add_route_7('admin:certificates:inactive_paginated|json', '/certificates/inactive/{@page}.json')
     config.add_route_7('admin:certificate:focus', '/certificate/{@id}')
     config.add_route_7('admin:certificate:focus|json', '/certificate/{@id}.json')
     config.add_route_7('admin:certificate:focus:config|json', '/certificate/{@id}/config.json')
